# LED_Controller

arduino/: led_brightness_control.ino
diagram/: diagram.json
qt_gui/: CMakeLists.txt
qt_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h
qt_gui/ui/: mainwindow.ui
